fixed horizontal scroll

--- a/static/styles.css
+++ b/static/styles.css
@@ -53,6 +53,10 @@ nav ul {
 nav ul li {
   list-style-type: none;
   margin-right: 2vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 nav a {
@@ -93,8 +97,9 @@ nav ul li a:hover {
 }
 
 form {
-  margin: 20px auto;
-  width: 80%;
+  /* margin: 20px auto; */
+  padding: 0 20px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -103,7 +108,7 @@ form {
 
 form label {
   width: 100%;
-  margin: 5px 0;
+  margin: 10px 0;
 }
 
 form select {
